--- a/calculator.html
+++ b/calculator.html
@@ -16,6 +16,11 @@
                 var num = document.getElementById("n1");
                 num.value = Math.pow(num.value, 4);
             }
+            function square() {
+                var num = document.getElementById("n1");
+                num.value = Math.pow(num.value, 2);
+            }
+
         </script>
     </head>
     <body>
@@ -25,6 +30,7 @@
             <button onclick="cube()"> x^3 </button>
             <button onclick="sin()"> sin(x) </button>
             <button onclick="elevado4()"> x^4 </button>
+            <button onclick="square()"> x^2 </button>
         </p>
     </body>
 </html>
