--- a/calculator.html
+++ b/calculator.html
@@ -20,6 +20,10 @@
                 var num = document.getElementById("n1");
                 num.value = Math.pow(num.value, 2);
             }
+            function inverse() {
+                var num = document.getElementById("n1");
+                num.value = 1/num.value;
+            }
 
         </script>
     </head>
@@ -31,6 +35,7 @@
             <button onclick="sin()"> sin(x) </button>
             <button onclick="elevado4()"> x^4 </button>
             <button onclick="square()"> x^2 </button>
+            <button onclick="inverse()"> 1/x </button>
         </p>
     </body>
 </html>
